--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="pessoas">
                 <label for="pessoas">Quantidade de Pessoas</label>
-                <p>Não Pode ser zero</p>
+                <p id="erro">Não Pode ser zero</p>
                 <div>
                     <img src="./images/icon-person.svg" alt="icone do cifão">
                     <input type="number" name="pessoas" id="pessoas" placeholder="0">
