--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
             </div>
 
             <div class="pessoas">
-                <label for="pessoas">Quantidade de Pessoas</label>
-                <p id="erro">Não Pode ser zero</p>
-                <div>
+                <div class="textos">
+                    <label for="pessoas">Quantidade de Pessoas</label>
+                <p id="erro">não pode ser zero</p>
+                </div>
+
+                <div class="input-box">
                     <img src="./images/icon-person.svg" alt="icone do cifão">
                     <input type="number" name="pessoas" id="pessoas" placeholder="0">
                 </div>               
